<resources>
    <string name="app_name">WalletOk</string>
    <string name="action_settings">Configurações</string>
    <string name="financas_preferences">financas_preferences</string>
    <string name="primeiro_uso">first_time</string>
    <string name="manter_conectado">manter_conectado</string>
    <string name="adiciona_despesa">Adiciona Despesa</string>
    <string name="adiciona_receita">Adiciona Receita</string>
    <string name="adiciona_categoria">Adiciona Categoria</string>

    <string-array name="perguntas">
        <item>Nome do primeiro animal de estimação?</item>
        <item>Marca do seu primeiro carro?</item>
    </string-array>

    <string name="tipo_mov_despesa">Despesas</string>
    <string name="tipo_mov_receita">Receitas</string>

    <array name="categoria_despesas">
        <item>Alimentação</item>
        <item>Compras</item>
        <item>Contas</item>
        <item>Educação</item>
        <item>Lazer</item>
        <item>Saúde</item>
        <item>Transporte</item>
        <item>Outros</item>
        <item>Indefinido</item>
    </array>

    <array name="categoria_receitas">
        <item>Salário</item>
        <item>Presente</item>
        <item>Prêmio</item>
        <item>Outros</item>
        <item>Indefinido</item>
    </array>

    <string name="material_calendar_monday">S</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">Q</string>
    <string name="material_calendar_thursday">Q</string>
    <string name="material_calendar_friday">S</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">D</string>

    <array name="material_calendar_months_array">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </array>

    <string name="material_calendar_today_button">Hoje</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="sair">Sair/Deslogar</string>
    <string name="usuario">usuario_nome</string>
    <string name="sobre">Sobre</string>
    <string name="desativa_tela_abertura">desativar_tela_abertura</string>
    <string name="desativa_tela_abertura_title">Desativar Tela de Abertura</string>
    <string name="protecao_por_senha">protecao_por_senha</string>
    <string name="backup_path">backup_path</string>
    <string name="export_file_path">export_file_path</string>
    <string name="grafico_label_titulo">Despesas</string>
    <string name="opcao_sim">SIM</string>
    <string name="opcao_nao">NÂO</string>
    <string name="dialog_msg_apagar">APAGAR</string>
    <string name="dialog_titulo_deletar_tarefa">Remoção de Despesa</string>
    <string name="dialog_titulo_apagar_receita">Remoção de Receita</string>
    <string name="lista_vazia_titulo_receita">Nenhuma Receita</string>
    <string name="lista_vazia_titulo_despesa">Nenhuma Despesa</string>
    <string name="lista_vazia_titulo_sem_registro">Sem registro de dados</string>
    <string name="lista_vazia_titulo_vazio">Vazio</string>
    <string name="despesa_total_zero">R$ 0,00</string>
    <string name="despesa_total_label">Despesa Total:</string>
    <string name="valor_disponivel_label">Disponivel:</string>
    <string name="hint_digite_a_resposta">Digite a Resposta</string>
    <string name="dev_email">adilson@gmail.com</string>
    <string name="company_name">ASU Projects</string>
    <string name="selecao_formato_arquivo">Selecione formato do arquivo</string>
    <string name="digite_nome_do_arquivo">Digite nome do arquivo</string>
    <string name="csv_format">.CSV</string>
    <string name="json_format">.JSON</string>
    <string name="aba_titulo_despesas">Despesas</string>
    <string name="aba_titulo_receitas">Receitas</string>
    <string name="aba_titulo_resumo">Resumo</string>
    <string name="msg_sair_do_app">Deseja sair/deslogar do App?</string>
    <string name="dialog_titulo_backup">Backup</string>
    <string name="dialog_msg_backup">Este procedimento ira realizar backup dos dados. Continuar?</string>
    <string name="opcao_prosseguir">Prosseguir</string>
    <string name="msg_erro_backup">Erro ao realizar o Backup</string>
    <string name="msg_sucesso_backup">Backup Realizado com Sucesso! Salvo em:</string>
    <string name="opcao_cancelar">Cancelar</string>
    <string name="dialog_titulo_restaurar">Restaurar Dados</string>
    <string name="dialog_msg_restaurar">Este procedimento ira restaurar dados a partir do backup  Continuar?</string>
    <string name="intent_chooser_sel_file">Selecione o Arquivo</string>
    <string name="dialog_titulo_exportar">Exportar dados</string>
    <string name="opcao_exportar">EXPORTAR</string>
    <string name="msg_sucesso_exportar">Dados exportados com Sucesso!</string>
    <string name="msg_sucesso_restaurar">Dados restaurados com Sucesso!</string>
    <string name="msg_falha_backup">Não foi possivel realizar o Backup</string>
    <string name="msg_falha_exportar_arquivo">Falha ao exportar os dados</string>
    <string name="msg_caminho_arquivo_desconhecido">Caminho do arquivo desconhecido.</string>
    <string name="msg_erro_validacao_campo_obrigatorio">Obrigatório preencher campo usuario</string>
    <string name="msg_erro_validacao_caracteres_size">Nome usuario deve conter de 6 a no maximo 15 caracteres</string>
    <string name="msg_erro_senha_vazia">Senha não pode estar em branco</string>
    <string name="msg_erro_validacao_senha_caracteres">Senha precisa conter no minimo 6 caracteres</string>
    <string name="msg_erro_senha_nao_corresponde">Necessario redigitar a senha</string>
    <string name="msg_erro_digite_novamente">Senha não corresponde. Digite Novamente</string>
    <string name="msg_erro_resposta_pergunta_vazia">Por favor, informe uma resposta a pergunta.</string>
    <string name="appbar_titulo_cofiguracoes">Configurações</string>
    <string name="appbar_titulo_despesa">Adiciona Despesa</string>
    <string name="appbar_titulo_edicao_despesa">Editar Despesa</string>
    <string name="appbar_titulo_edicao_receita">Editar Receita</string>
    <string name="msg_erro_valor_em_branco">Valor está em Branco</string>
    <string name="msg_erro_valor_baixo">Valor muito baixo</string>
    <string name="tx_cadastro_de_senha">Cadastro de Senha</string>
    <string name="edit_hint_nome">Nome</string>
    <string name="edit_hint_senha">Senha</string>
    <string name="edit_hint_digite_novamente_a_senha">Digite novamente a Senha</string>
    <string name="tx_selecione_uma_pergunta">Selecione uma pergunta</string>
    <string name="tx_resposta">Resposta</string>
    <string name="edit_hint_digite_a_resposta">Digite a Resposta</string>
    <string name="btn_cadastro_senha">Cadastro</string>
    <string name="dinheiro_simbolo">R$</string>
    <string name="edit_hint_valor">Valor</string>
    <string name="edit_hint_descri_o_max_30_caracteres">Descrição (max 30 caracteres)</string>
    <string name="tx_categoria">Categoria</string>
    <string name="tx_data">Data</string>
    <string name="tx_pagamento">Pagamento</string>
    <string name="radiobutton_opcao_dinheiro">Dinheiro</string>
    <string name="radiobutton_opcao_cartao">Cartao</string>
    <string name="radiobutton_opcao_outros">Outros</string>
    <string name="edit_hint_digite_seu_nome">Digite seu Nome</string>
    <string name="edit_hint_digite_a_senha">Digite a Senha</string>
    <string name="btn_login_acessar">Acessar</string>
    <string name="check_manter_conectado">Manter Conectado</string>
    <string name="link_esqueci_a_senha">esqueci a senha</string>
    <string name="app_versao">Versão 1.0</string>
    <string name="tx_desenvolvido_por">Desenvolvido Por:</string>
    <string name="dev_name">Adilson S. Utiama</string>
    <string name="diretorio_do_backup">Diretorio do Backup</string>
    <string name="nenhum_backup_realizado_ate_o_momento">Nenhum Backup realizado ate o momento</string>
    <string name="diretorio_de_arquivos_exportados">Diretorio de arquivos exportados</string>
    <string name="nenhum_dado_exportado_ate_o_momento">Nenhum dado exportado ate o momento</string>
    <string name="tx_total_de_despesas">Total de Despesas:</string>
    <string name="tx_valor_dispon_vel">Valor Disponível:</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_block_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="tx_login_invalido">Usuario ou senha invalido!</string>
    <string name="tx_nao_tem_senha">Não tem senha? Clique aqui.</string>
    <string name="tx_pergunta_secreta">Pergunta Secreta</string>
    <string name="tx_verificar">Verficar</string>
    <string name="tx_resposta_invalida">Resposta Inválida.</string>
    <string name="tx_cancelar">Cancelar</string>
    <string name="tx_adicionar_receita">Adiciona Receita</string>
    <string name="tx_msg_erro_val_valorembranco">Valor está em Branco</string>
    <string name="tx_msg_erro_val_valorbaixo">Valor muito baixo</string>
    <string name="choose_folder_title">Selecione uma Pasta</string>
    <string name="chooser_folder_ok">Confirmar</string>
    <string name="chooser_folder_cancel">Cancelar</string>
</resources>
