<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_selecao_pasta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="Selecione pasta de Destino"/>
    <TextView
        android:id="@+id/tx_caminho_arquivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/nome_arquivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_nome_do_arquivo"
        android:inputType="text"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selecao_formato_arquivo"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/csv_format"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/csv_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/csv_format"/>

        <RadioButton
            android:id="@+id/json_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/json_format"/>
    </RadioGroup>


</android.support.v7.widget.LinearLayoutCompat>