<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.SobreActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_versao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/app_versao"
            app:layout_constraintEnd_toEndOf="@+id/textView_appname"
            app:layout_constraintStart_toStartOf="@+id/textView_appname"
            app:layout_constraintTop_toBottomOf="@+id/textView_appname" />

        <TextView
            android:id="@+id/textView_desenvido_por"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/tx_desenvolvido_por"
            app:layout_constraintEnd_toEndOf="@+id/textView_versao"
            app:layout_constraintStart_toStartOf="@+id/textView_versao"
            app:layout_constraintTop_toBottomOf="@+id/textView_versao" />

        <TextView
            android:id="@+id/textView_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/dev_name"
            android:textColor="@color/defaultColor"
            app:layout_constraintEnd_toEndOf="@+id/textView_desenvido_por"
            app:layout_constraintStart_toStartOf="@+id/textView_desenvido_por"
            app:layout_constraintTop_toBottomOf="@+id/textView_desenvido_por" />

        <TextView
            android:id="@+id/textView_caminho_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/diretorio_do_backup"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_nome" />

        <TextView
            android:id="@+id/textView_diretorio_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/nenhum_backup_realizado_ate_o_momento"
            app:layout_constraintEnd_toEndOf="@+id/textView_caminho_backup"
            app:layout_constraintStart_toStartOf="@+id/textView_caminho_backup"
            app:layout_constraintTop_toBottomOf="@+id/textView_caminho_backup" />

        <TextView
            android:id="@+id/textView_exportados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/diretorio_de_arquivos_exportados"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_diretorio_backup" />

        <TextView
            android:id="@+id/textView_diretorio_exportados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/nenhum_dado_exportado_ate_o_momento"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView_exportados"
            app:layout_constraintStart_toStartOf="@+id/textView_exportados"
            app:layout_constraintTop_toBottomOf="@+id/textView_exportados"
            app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>