<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ExportarArquivoActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_pasta"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_selecao_pasta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Selecione Destino" />

    </android.support.v7.widget.LinearLayoutCompat>


    <TextView
        android:id="@+id/tx_caminho_arquivo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayoutCompat"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/nome_arquivo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/digite_nome_do_arquivo"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/tx_caminho_arquivo"
        app:layout_constraintStart_toStartOf="@+id/tx_caminho_arquivo"
        app:layout_constraintTop_toBottomOf="@+id/tx_caminho_arquivo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/selecao_formato_arquivo"
        app:layout_constraintEnd_toEndOf="@+id/nome_arquivo"
        app:layout_constraintStart_toStartOf="@+id/nome_arquivo"
        app:layout_constraintTop_toBottomOf="@+id/nome_arquivo" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checkedButton="@id/csv_format"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/csv_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/csv_format" />

        <RadioButton
            android:id="@+id/json_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/json_format" />
    </RadioGroup>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_exportar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="Exportar"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_corner_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</android.support.constraint.ConstraintLayout>