<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/textInputLayoutValorDespesa"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="top"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_anchorGravity="top|center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dinheiro_simbolo"
            android:textColor="@android:color/white"
            android:textSize="32sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/campo_valor_despesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:foregroundGravity="center_vertical"
            android:hint="@string/edit_hint_valor"
            android:inputType="numberDecimal|text"
            android:textColor="@android:color/white"
            android:textSize="32sp" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="150dp"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/layout_dados_receita"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:fitsSystemWindows="true">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutDescricaoDespesa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/campo_descricao_despesa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_hint_descri_o_max_30_caracteres"
                    android:inputType="textCapSentences"
                    android:maxLength="30" />

            </android.support.design.widget.TextInputLayout>


            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.57" />

            <TextView
                android:id="@+id/textView_categoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx_categoria"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/campo_spinner_despesa"
                app:layout_constraintStart_toStartOf="@+id/campo_spinner_despesa" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/campo_spinner_despesa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_dropdown"
                android:spinnerMode="dropdown"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="@+id/textInputLayoutDescricaoDespesa"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDescricaoDespesa"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/tx_data"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/campo_data_despesa"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/textView_categoria" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/campo_data_despesa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_background"
                android:focusable="true"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/campo_spinner_despesa"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayoutDescricaoDespesa"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/campo_spinner_despesa" />

            <TextView
                android:id="@+id/text_pagamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx_pagamento"
                app:layout_constraintBottom_toTopOf="@+id/radioGroup"
                app:layout_constraintStart_toStartOf="@+id/radioGroup" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="40dp"
                android:checkedButton="@+id/pag_dinheiro"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/campo_data_despesa"
                app:layout_constraintStart_toStartOf="@+id/campo_spinner_despesa"
                app:layout_constraintTop_toBottomOf="@+id/campo_data_despesa"
                app:layout_constraintVertical_bias="0.0">

                <RadioButton
                    android:id="@+id/pag_dinheiro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onPagamentoSelecionado"
                    android:text="@string/radiobutton_opcao_dinheiro" />

                <RadioButton
                    android:id="@+id/pag_cartao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onPagamentoSelecionado"
                    android:text="@string/radiobutton_opcao_cartao" />

                <RadioButton
                    android:id="@+id/pag_outros"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onPagamentoSelecionado"
                    android:text="@string/radiobutton_opcao_outros" />
            </RadioGroup>

            <TextView
                android:id="@+id/link_cartao_nao_cadastrado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:alpha="0"
                android:text="Nenhum cartão cadastrado. Cadastrar um?"
                android:textAlignment="center"
                android:textColor="@color/valor_negativo_d"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/radioGroup"
                app:layout_constraintStart_toStartOf="@+id/radioGroup"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/painelCartao"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@id/radioGroup"
                app:layout_constraintStart_toStartOf="@id/radioGroup"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup">

                <TextView
                    android:id="@+id/textView_selecione_cartao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Selecione Cartão"
                    app:layout_constraintStart_toStartOf="parent" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinner_cartao"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/bg_dropdown"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/textView_selecione_cartao"
                    app:layout_constraintTop_toBottomOf="@id/textView_selecione_cartao" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.57" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/campo_parcelas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/spinner_cartao"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/guideline2"
                    app:layout_constraintTop_toTopOf="@+id/spinner_cartao">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:hint="Parcelas"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_salvar_despesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_anchor="@id/textInputLayoutValorDespesa"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/fab_add" />


</android.support.design.widget.CoordinatorLayout>


